@@ -1875,15 +1875,25 @@ static void ntfs_dump_inode_general_info(ntfs_inode *inode)
 
 	printf("MFT record Flags:\t\t ");
 	if (inode_flags) {
-		if (!(MFT_RECORD_IN_USE & inode_flags)) {
-			printf("DELETED ");
+		if (MFT_RECORD_IN_USE & inode_flags) {
+			printf("IN_USE ");
+			inode_flags &= ~MFT_RECORD_IN_USE;
 		}
 		if (MFT_RECORD_IS_DIRECTORY & inode_flags) {
 			printf("DIRECTORY ");
+			inode_flags &= ~MFT_RECORD_IS_DIRECTORY;
 		}
-		if (~(MFT_RECORD_IN_USE | MFT_RECORD_IS_DIRECTORY) & inode_flags) {
+		/* The meaning of IS_4 is illusive but not its existence. */
+		if (MFT_RECORD_IS_4 & inode_flags) {
+			printf("IS_4 ");
+			inode_flags &= ~MFT_RECORD_IS_4;
+		}
+		if (MFT_RECORD_IS_VIEW_INDEX & inode_flags) {
+			printf("VIEW_INDEX ");
+			inode_flags &= ~MFT_RECORD_IS_VIEW_INDEX;
+		}
+		if (inode_flags)
 			printf("UNKNOWN:0x%04hx",inode_flags);
-		}
 	} else {
 		printf("none");
 	}
